--- a/webproject/contact.html
+++ b/webproject/contact.html
@@ -24,12 +24,11 @@
                 </ul>
              </div>
             </nav>
-            <div class="hero-area">
-                <div class="hero-text">
-                    <h1>Sidney Alexander</h1>
-                    <h2> Interactive Designer</h2>
-                    <p> Welcome to my digital portfolio!</p>
-                    <div class="button"><a href="about.html">About me</a></div>
+            <section class="form">
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc4I39L6C7Rqx9I_3PcbfiSy4ul1MJJ1PeqF39J0OYO2DgB8Q/viewform?embedded=true" width="1050
+            " height="1058" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+        </section>
+
             </div>
             <div class="socials">
                 <div><a href="https://www.linkedin.com/in/sidney-a-2a1911200" class="social">
