--- a/webproject/home.html
+++ b/webproject/home.html
@@ -27,9 +27,8 @@
             <div class="hero-area">
                 <div class="hero-text">
                     <h1>Sidney Alexander</h1>
-                    <h2> Interactive Designer</h2>
-                    <p> Welcome to my digital portfolio!</p>
-                    <div class="button"><a href="about.html">About me</a></div>
+                    <p> Interactive Designer</p>
+                    <div class="button">About me</div>   
             </div>
             <div class="socials">
                 <div><a href="https://www.linkedin.com/in/sidney-a-2a1911200" class="social">
